# picnic

./: .gitignore  CNAME  Gemfile  NEWS.md  README.md  _config.yml  about.md  communication.md  communication_studies.md  crawl.R  data.md  economics.md  environmental_and_climate_politics_studies.md  environmental_studies.md  fun.R  index.md  international_relations.md  main.py  migration.md  migration_studies.md  multidisciplinary.md  notifications.md  political_science.md  politics.md  public_administration.md  public_administration_and_policy.md  pyproject.toml  requirements-dev.txt  requirements.txt  sociology.md  stats.R  supabase-setup.sql  working_papers.md
.github/: FUNDING.yml
_data/: bundles.json  communication.json  economics.json  economics_journals.json  environmental_and_climate_politics_studies.json  journals.json  migration.json  migration_journals.json  multidisciplinary.json  multidisciplinary_journals.json  osf_subjects.json  politics.json  politics_journals.json  preprints.json  public_administration_and_policy.json  publications.json  sociology.json  sociology_journals.json  stats.csv
_includes/: card.html  cards.html  cards_md.html  coffee_button.html  foot.html  head.html  journal_list.html  nav.html  preprints_card.html  preprints_cards.html  preprints_cards_md.html  preprints_settings.html  settings.html
_layouts/: home.html  info.html  main.html  notifications.html  page.html
data/: journals.json  preprints.json  publications.json
json/: bundles.json  communication.json  communication_journals.json  economics.json  economics_journals.json  (+12 more)
(+86 files in other folders)
